# training_wheels

PYTHON/: DSA.ipynb  check_gpu.py  flatten.py
agents/: agents_data_analysis.ipynb  crew_ai.ipynb
audio_classification/: ann_mobilenetv2.ipynb  model_testing_1sec_io.ipynb  server.py  stream_server_c.py  testing_1sec_io.ipynb  total_audio_stream.py  training_mvv2.ipynb
audio_scripts/: audio_concat.ipynb  audio_silence_collection.ipynb  split_downsample.ipynb
biz_chatbot/: bizbot.py  config.py  doc_processing.py  main.py  prompt.py  scraper.py
contract_analysis/alternative_strategies/docling/api/: .gitignore  chunking.py  crud.py  llm_model.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  routes.py  schemas.py  service.py
contract_analysis/alternative_strategies/docling/api/utils/: file_saver.py
contract_analysis/alternative_strategies/multimodal/: .gitignore  README.md  crud.py  database.py  models.py  page_converter.py  parallel_processor.py  post_process.py  prompts.py  pyproject.toml  routes.py  schemas.py  service.py
contract_analysis/alternative_strategies/multimodal/utils/: pdf_utils.py
contract_analysis/cms-ai/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  testing.ipynb
contract_analysis/cms-ai/app/: main.py
contract_analysis/cms-ai/app/controllers/: controller.py  document_processing.py
contract_analysis/cms-ai/app/core/: config.py  exceptions.py  prompt.py  security.py
contract_analysis/cms-ai/app/db/: database.py  db_dump.py  doc_identify.json  insights_prompt.json  pmp.txt  prompt_schema.json  rules.json
contract_analysis/cms-ai/app/models/: user.py
contract_analysis/cms-ai/app/routers/: ai_router.py
contract_analysis/cms-ai/app/utils/: util.py
driver_drowsiness/: driver_drowsiness.py
email_builder_ai/: vercel_ai.html  vercel_garden.html
face_recognition/: views.py
fine_tune_llm/: llama_2_fine_tune_colab.ipynb  train.csv
flowise/: lead.json  (+1 more)
voicebot/: .env  agent.py  basic_agent.py  main.py  pyproject.toml
(+107 files in other folders)
